# btrblocks

./: CMakeLists.txt  Config.cmake.in  btrblocks.pc.in
bench/: AwsDatasetDownloader.cpp  local.cmake
btrblocks/: btrblocks.hpp  local.cmake
btrblocks/compression/: Datablock.cpp  SchemePicker.hpp
btrblocks/scheme/: SchemeType.hpp
btrblocks/scheme/string/: DynamicDictionary.cpp  Fsst.cpp
btrblocks/stats/: NumberStats.hpp
btrblocks/storage/: Chunk.cpp  MMapVector.hpp  Relation.cpp
btrfiles/: Parser.cpp
cmake/: croaring.cmake  fastpfor.cmake  fsst.cmake  tbb.cmake
tools/: local.cmake
tools/benchmark-blocksize/: datasets.csv  datasetssmall.csv  datasetsuri.csv  datasetsuris.csv  datasetsurismall.csv  sync.sh
tools/benchmark-blocksize/data-fetch/: sync.sh
tools/conversion/: csvtobtr.cpp  decompression-speed.cpp
tools/simd-comparison/: bench_driver.cpp  common.hpp  local.cmake
tools/simd-comparison/dyndict/: DynamicDictionary.hpp  dyndict_benchmark.cpp  dyndict_test.cpp
tools/simd-comparison/dyndict/flavors/: avx2.cpp  avx512.cpp  naive.cpp  sve.cpp
tools/simd-comparison/rle/: rle_benchmark.cpp  rle_test.cpp  test.cpp  test_typed.cpp
tools/simd-comparison/rle/diagrams/: PerfEvent.hpp  create_diagrams.ipynb  membw.cpp  membw_analysis.ipynb  membw_rle_lower.cpp  parallel.sh  rle_lower_bound.cpp
tools/simd-comparison/rle/flavors/: RLE.hpp  avx2.cpp  avx512.cpp  compintrin.cpp  neon.cpp  plain.cpp  sve.cpp
tools/simd-comparison/rle/lowerbound/: Makefile  rle_lower_bound.cpp
tools/simd-comparison/rle/lowerbound/analysis/: analysis.ipynb
